# openal-soft

./: CMakeLists.txt  android_ci_build.bash  define.cpp
.github/workflows/: ci.yml
alc/: export_list.h
include/AL/: config.h  config_backends.h  config_simd.h  version.h
jni/: Android.mk  Application.mk  ‎Application.mk
